5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4012/executions/1798_2566.log
== SUBMITION (2019-06-12 09:33:25) 
-- CODE:
from numpy import*
f = array(eval(input("faltas:")))

s=0
t=0
q=0
q1=0
se=0
sa=0

for i in range(size(f)):
	if(f[i]==2):
		s+=1
	elif(f[i]==3):
		t+=1
	elif(f[i]==4):
		q+=1
	elif(f[i]==5):
		q1+=1
	elif(f[i]==6):
		se+=1

		
-- EXECUTION TIME:
1.14971
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:

-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:

-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 09:42:12) 
-- CODE:
from numpy import*
f = array(eval(input("faltas:")))

s=0
t=0
q=0
q1=0
se=0
sa=0

for i in range(size(f)):
	if(f[i]==2):
		s+=1
	elif(f[i]==3):
		t+=1
	elif(f[i]==4):
		q+=1
	elif(f[i]==5):
		q1+=1
	elif(f[i]==6):
		se+=1
	elif(f[i]==7):
		sa+=1
h=s+t+q+q1+se+sa
j=zeros(6, dtype=float)
for i in range((size(j)):
	j[0]=round(((s/h) * 100), 1)
	j[1]=round(((t/h)*100),1)
	j[2]=round(((q/h)*100),1)
	j[3]=round(((q1/h)*100),1)
	j[4]=round(((se/h)*100),1)
	j[5]=round(((sa/h)*100),1) 
	print(j) 

		
-- ERROR:
File "XXXX", line 26
    for i in range((size(j)):
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 09:43:22) 
-- CODE:
from numpy import*
f = array(eval(input("faltas:")))

s=0
t=0
q=0
q1=0
se=0
sa=0

for i in range(size(f)):
	if(f[i]==2):
		s+=1
	elif(f[i]==3):
		t+=1
	elif(f[i]==4):
		q+=1
	elif(f[i]==5):
		q1+=1
	elif(f[i]==6):
		se+=1
	elif(f[i]==7):
		sa+=1
h=s+t+q+q1+se+sa
j=zeros(6, dtype=float)
for i in range (size(j)):
	j[0]=round(((s/h) * 100), 1)
	j[1]=round(((t/h)*100),1)
	j[2]=round(((q/h)*100),1)
	j[3]=round(((q1/h)*100),1)
	j[4]=round(((se/h)*100),1)
	j[5]=round(((sa/h)*100),1) 
	print(j) 

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 09:43:27) 
-- CODE:
from numpy import*
f = array(eval(input("faltas:")))

s=0
t=0
q=0
q1=0
se=0
sa=0

for i in range(size(f)):
	if(f[i]==2):
		s+=1
	elif(f[i]==3):
		t+=1
	elif(f[i]==4):
		q+=1
	elif(f[i]==5):
		q1+=1
	elif(f[i]==6):
		se+=1
	elif(f[i]==7):
		sa+=1
h=s+t+q+q1+se+sa
j=zeros(6, dtype=float)
for i in range (size(j)):
	j[0]=round(((s/h) * 100), 1)
	j[1]=round(((t/h)*100),1)
	j[2]=round(((q/h)*100),1)
	j[3]=round(((q1/h)*100),1)
	j[4]=round(((se/h)*100),1)
	j[5]=round(((sa/h)*100),1) 
	print(j) 

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 09:43:48) 
-- CODE:
from numpy import*
f = array(eval(input("faltas:")))

s=0
t=0
q=0
q1=0
se=0
sa=0

for i in range(size(f)):
	if(f[i]==2):
		s+=1
	elif(f[i]==3):
		t+=1
	elif(f[i]==4):
		q+=1
	elif(f[i]==5):
		q1+=1
	elif(f[i]==6):
		se+=1
	elif(f[i]==7):
		sa+=1
h=s+t+q+q1+se+sa
j=zeros(6, dtype=float)
for i in range (size(j)):
	j[0]=round(((s/h) * 100), 1)
	j[1]=round(((t/h)*100),1)
	j[2]=round(((q/h)*100),1)
	j[3]=round(((q1/h)*100),1)
	j[4]=round(((se/h)*100),1)
	j[5]=round(((sa/h)*100),1) 
	print(j) 

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 09:44:23) 
-- CODE:
from numpy import*
f = array(eval(input("faltas:")))

s=0
t=0
q=0
q1=0
se=0
sa=0

for i in range(size(f)):
	if(f[i]==2):
		s+=1
	elif(f[i]==3):
		t+=1
	elif(f[i]==4):
		q+=1
	elif(f[i]==5):
		q1+=1
	elif(f[i]==6):
		se+=1
	elif(f[i]==7):
		sa+=1
h=s+t+q+q1+se+sa
j=zeros(6, dtype=float)
for i in range (size(j)):
	j[0]=round(((s/h) * 100), 1)
	j[1]=round(((t/h)*100),1)
	j[2]=round(((q/h)*100),1)
	j[3]=round(((q1/h)*100),1)
	j[4]=round(((se/h)*100),1)
	j[5]=round(((sa/h)*100),1) 
	print(j) 

		
-- EXECUTION TIME:
1.19303
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 09:44:37) 
-- CODE:
from numpy import*
f = array(eval(input("faltas:")))

s=0
t=0
q=0
q1=0
se=0
sa=0

for i in range(size(f)):
	if(f[i]==2):
		s+=1
	elif(f[i]==3):
		t+=1
	elif(f[i]==4):
		q+=1
	elif(f[i]==5):
		q1+=1
	elif(f[i]==6):
		se+=1
	elif(f[i]==7):
		sa+=1
h=s+t+q+q1+se+sa
j=zeros(6, dtype=float)
for i in range (size(j)):
	j[0]=round(((s/h) * 100), 1)
	j[1]=round(((t/h)*100),1)
	j[2]=round(((q/h)*100),1)
	j[3]=round(((q1/h)*100),1)
	j[4]=round(((se/h)*100),1)
	j[5]=round(((sa/h)*100),1) 
	print(j) 

		
-- EXECUTION TIME:
1.14322
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 09:47:21) 
-- CODE:
from numpy import*
f = array(eval(input("faltas:")))

s=0
t=0
q=0
q1=0
se=0
sa=0

for i in range(size(f)):
	if(f[i]==2):
		s+=1
	elif(f[i]==3):
		t+=1
	elif(f[i]==4):
		q+=1
	elif(f[i]==5):
		q1+=1
	elif(f[i]==6):
		se+=1
	elif(f[i]==7):
		sa+=1
h=s+t+q+q1+se+sa
j=zeros(6, dtype=float)
for i in range (size(j)):
	j[0]=round(((s/h) * 100), 1)
	j[1]=round(((t/h)*100),1)
	j[2]=round(((q/h)*100),1)
	j[3]=round(((q1/h)*100),1)
	j[4]=round(((se/h)*100),1)
	j[5]=round(((sa/h)*100),1) 
	print(j) 

		
-- EXECUTION TIME:
1.12766
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 09:47:34) 
-- CODE:
from numpy import*
f = array(eval(input("faltas:")))

s=0
t=0
q=0
q1=0
se=0
sa=0

for i in range(size(f)):
	if(f[i]==2):
		s+=1
	elif(f[i]==3):
		t+=1
	elif(f[i]==4):
		q+=1
	elif(f[i]==5):
		q1+=1
	elif(f[i]==6):
		se+=1
	elif(f[i]==7):
		sa+=1
h=s+t+q+q1+se+sa
j=zeros(6, dtype=float)
for i in range (size(j)):
	j[0]=round(((s/h) * 100), 1)
	j[1]=round(((t/h)*100),1)
	j[2]=round(((q/h)*100),1)
	j[3]=round(((q1/h)*100),1)
	j[4]=round(((se/h)*100),1)
	j[5]=round(((sa/h)*100),1) 
	print(j) 
		
-- EXECUTION TIME:
1.13477
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 09:47:40) 
-- CODE:
from numpy import*
f = array(eval(input("faltas:")))

s=0
t=0
q=0
q1=0
se=0
sa=0

for i in range(size(f)):
	if(f[i]==2):
		s+=1
	elif(f[i]==3):
		t+=1
	elif(f[i]==4):
		q+=1
	elif(f[i]==5):
		q1+=1
	elif(f[i]==6):
		se+=1
	elif(f[i]==7):
		sa+=1
h=s+t+q+q1+se+sa
j=zeros(6, dtype=float)
for i in range (size(j)):
	j[0]=round(((s/h) * 100), 1)
	j[1]=round(((t/h)*100),1)
	j[2]=round(((q/h)*100),1)
	j[3]=round(((q1/h)*100),1)
	j[4]=round(((se/h)*100),1)
	j[5]=round(((sa/h)*100),1) 
	print(j) 
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 09:48:14) 
-- CODE:
from numpy import*
f = array(eval(input("faltas:")))

s=0
t=0
q=0
q1=0
se=0
sa=0

for i in range(size(f)):
	if(f[i]==2):
		s+=1
	elif(f[i]==3):
		t+=1
	elif(f[i]==4):
		q+=1
	elif(f[i]==5):
		q1+=1
	elif(f[i]==6):
		se+=1
	elif(f[i]==7):
		sa+=1
h=s+t+q+q1+se+sa
j=zeros(6, dtype=float)
for i in range (size(j)):
	j[0]=round(((s/h) * 100), 1)
	j[1]=round(((t/h)*100),1)
	j[2]=round(((q/h)*100),1)
	j[3]=round(((q1/h)*100),1)
	j[4]=round(((se/h)*100),1)
	j[5]=round(((sa/h)*100),1) 
	print(j) 
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 09:48:52) 
-- CODE:
from numpy import*
f = array(eval(input("faltas:")))

s=0
t=0
q=0
q1=0
se=0
sa=0

for i in range(size(f)):
	if(f[i]==2):
		s+=1
	elif(f[i]==3):
		t+=1
	elif(f[i]==4):
		q+=1
	elif(f[i]==5):
		q1+=1
	elif(f[i]==6):
		se+=1
	elif(f[i]==7):
		sa+=1
h=s+t+q+q1+se+sa
j=zeros(6, dtype=float)
for i in range (size(j)):
	j[0]=round(((s/h) * 100), 1)
	j[1]=round(((t/h)*100),1)
	j[2]=round(((q/h)*100),1)
	j[3]=round(((q1/h)*100),1)
	j[4]=round(((se/h)*100),1)
	j[5]=round(((sa/h)*100),1) 
	print(j) 
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 09:48:55) 
-- CODE:
from numpy import*
f = array(eval(input("faltas:")))

s=0
t=0
q=0
q1=0
se=0
sa=0

for i in range(size(f)):
	if(f[i]==2):
		s+=1
	elif(f[i]==3):
		t+=1
	elif(f[i]==4):
		q+=1
	elif(f[i]==5):
		q1+=1
	elif(f[i]==6):
		se+=1
	elif(f[i]==7):
		sa+=1
h=s+t+q+q1+se+sa
j=zeros(6, dtype=float)
for i in range (size(j)):
	j[0]=round(((s/h) * 100), 1)
	j[1]=round(((t/h)*100),1)
	j[2]=round(((q/h)*100),1)
	j[3]=round(((q1/h)*100),1)
	j[4]=round(((se/h)*100),1)
	j[5]=round(((sa/h)*100),1) 
	print(j) 
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 09:50:34) 
-- CODE:
from numpy import*
f = array(eval(input("faltas:")))

s=0
t=0
q=0
q1=0
se=0
sa=0

for i in range(size(f)):
	if(f[i]==2):
		s+=1
	elif(f[i]==3):
		t+=1
	elif(f[i]==4):
		q+=1
	elif(f[i]==5):
		q1+=1
	elif(f[i]==6):
		se+=1
	elif(f[i]==7):
		sa+=1
h=s+t+q+q1+se+sa
j=zeros(6, dtype=float)
for i in range (size(j)):
	j[0]=round(((s/h) * 100), 1)
	j[1]=round(((t/h)*100),1)
	j[2]=round(((q/h)*100),1)
	j[3]=round(((q1/h)*100),1)
	j[4]=round(((se/h)*100),1)
	j[5]=round(((sa/h)*100),1) 
	print(j) 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 09:50:40) 
-- CODE:
from numpy import*
f = array(eval(input("faltas:")))

s=0
t=0
q=0
q1=0
se=0
sa=0

for i in range(size(f)):
	if(f[i]==2):
		s+=1
	elif(f[i]==3):
		t+=1
	elif(f[i]==4):
		q+=1
	elif(f[i]==5):
		q1+=1
	elif(f[i]==6):
		se+=1
	elif(f[i]==7):
		sa+=1
h=s+t+q+q1+se+sa
j=zeros(6, dtype=float)
for i in range (size(j)):
	j[0]=round(((s/h) * 100), 1)
	j[1]=round(((t/h)*100),1)
	j[2]=round(((q/h)*100),1)
	j[3]=round(((q1/h)*100),1)
	j[4]=round(((se/h)*100),1)
	j[5]=round(((sa/h)*100),1) 
	print(j) 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 09:50:53) 
-- CODE:
from numpy import*
f = array(eval(input("faltas:")))

s=0
t=0
q=0
q1=0
se=0
sa=0

for i in range(size(f)):
	if(f[i]==2):
		s+=1
	elif(f[i]==3):
		t+=1
	elif(f[i]==4):
		q+=1
	elif(f[i]==5):
		q1+=1
	elif(f[i]==6):
		se+=1
	elif(f[i]==7):
		sa+=1
h=s+t+q+q1+se+sa
j=zeros(6, dtype=float)
for i in range (size(j)):
	j[0]=round(((s/h) * 100), 1)
	j[1]=round(((t/h)*100),1)
	j[2]=round(((q/h)*100),1)
	j[3]=round(((q1/h)*100),1)
	j[4]=round(((se/h)*100),1)
	j[5]=round(((sa/h)*100),1) 
	print(j) 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 10:16:31) 
-- CODE:
from numpy import*
f = array(eval(input("faltas:")))

s=0
t=0
q=0
q1=0
se=0
sa=0

for i in range(size(f)):
	if(f[i]==2):
		s+=1
	elif(f[i]==3):
		t+=1
	elif(f[i]==4):
		q+=1
	elif(f[i]==5):
		q1+=1
	elif(f[i]==6):
		se+=1
	elif(f[i]==7):
		sa+=1
h=s+t+q+q1+se+sa
j=zeros(6, dtype=float)
for i in range (size(j)):
	j[0]=round(((s/h) * 100), 1)
	j[1]=round(((t/h)*100),1)
	j[2]=round(((q/h)*100),1)
	j[3]=round(((q1/h)*100),1)
	j[4]=round(((se/h)*100),1)
	j[5]=round(((sa/h)*100),1) 
	print(j) 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 10:33:40) 
-- CODE:
from numpy import*
v = array(eval(input("faltas:")))

seg=0
ter=0
qua=0
qui=0
sex=0
sab=0

for i in range(size(v)):
	if(v[i]==2):
		seg = sesg + 1
	elif(v[i]==3):
		ter = ter + 1
	elif(v[i]==4):
		qua = qua + 1
	elif(v[i]==5):
		qui = qui + 1
	elif(v[i]==6):
		sex = sex + 1
	elif(v[i]==7):
		sab = sab + 1
s=seg+ter+qua+qui+sex+sab
t=zeros(6, dtype=float)
for i in v:
	t[0]=round(((seg/s)*100),1)
	t[1]=round(((ter/s)*100),1)
	t[2]=round(((qua/s)*100),1)
	t[3]=round(((qui/s)*100),1)
	t[4]=round(((sex/s)*100),1)
	t[5]=round(((sab/s)*100),1) 
	print(t) 

-- EXECUTION TIME:
1.1006
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2566/main.py", line 13, in <module>
    seg = sesg + 1
NameError: name 'sesg' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 10:33:52) 
-- CODE:
from numpy import*
v = array(eval(input("faltas:")))

seg=0
ter=0
qua=0
qui=0
sex=0
sab=0

for i in range(size(v)):
	if(v[i]==2):
		seg = sesg + 1
	elif(v[i]==3):
		ter = ter + 1
	elif(v[i]==4):
		qua = qua + 1
	elif(v[i]==5):
		qui = qui + 1
	elif(v[i]==6):
		sex = sex + 1
	elif(v[i]==7):
		sab = sab + 1
s=seg+ter+qua+qui+sex+sab
t=zeros(6, dtype=float)
for i in v:
	t[0]=round(((seg/s)*100),1)
	t[1]=round(((ter/s)*100),1)
	t[2]=round(((qua/s)*100),1)
	t[3]=round(((qui/s)*100),1)
	t[4]=round(((sex/s)*100),1)
	t[5]=round(((sab/s)*100),1) 
	print(t) 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 10:34:13) 
-- CODE:
from numpy import*
v = array(eval(input("faltas:")))

seg=0
ter=0
qua=0
qui=0
sex=0
sab=0

for i in range(size(v)):
	if(v[i]==2):
		seg = sesg + 1
	elif(v[i]==3):
		ter = ter + 1
	elif(v[i]==4):
		qua = qua + 1
	elif(v[i]==5):
		qui = qui + 1
	elif(v[i]==6):
		sex = sex + 1
	elif(v[i]==7):
		sab = sab + 1
s=seg+ter+qua+qui+sex+sab
t=zeros(6, dtype=float)
for i in v:
	t[0]=round(((seg/s)*100),1)
	t[1]=round(((ter/s)*100),1)
	t[2]=round(((qua/s)*100),1)
	t[3]=round(((qui/s)*100),1)
	t[4]=round(((sex/s)*100),1)
	t[5]=round(((sab/s)*100),1) 
	print(t) 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 10:36:06) 
-- CODE:
from numpy import*
v = array(eval(input("faltas:")))

seg=0
ter=0
qua=0
qui=0
sex=0
sab=0

for i in range(size(v)):
	if(v[i]==2):
		seg = seg + 1
	elif(v[i]==3):
		ter = ter + 1
	elif(v[i]==4):
		qua = qua + 1
	elif(v[i]==5):
		qui = qui + 1
	elif(v[i]==6):
		sex = sex + 1
	elif(v[i]==7):
		sab = sab + 1
s=seg+ter+qua+qui+sex+sab
t=zeros(6, dtype=float)
for i in v:
	t[0]=round(((seg/s)*100),1)
	t[1]=round(((ter/s)*100),1)
	t[2]=round(((qua/s)*100),1)
	t[3]=round(((qui/s)*100),1)
	t[4]=round(((sex/s)*100),1)
	t[5]=round(((sab/s)*100),1) 
	print(t) 

-- EXECUTION TIME:
0.986698
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
faltas:[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
faltas:[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
faltas:[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 10:36:32) 
-- CODE:
from numpy import*
v = array(eval(input("faltas:")))

seg=0
ter=0
qua=0
qui=0
sex=0
sab=0

for i in range(size(v)):
	if(v[i]==2):
		seg = seg + 1
	elif(v[i]==3):
		ter = ter + 1
	elif(v[i]==4):
		qua = qua + 1
	elif(v[i]==5):
		qui = qui + 1
	elif(v[i]==6):
		sex = sex + 1
	elif(v[i]==7):
		sab = sab + 1
s=seg+ter+qua+qui+sex+sab
t=zeros(6, dtype=float)
for i in v:
	t[0]=round(((seg/s)*100),1)
	t[1]=round(((ter/s)*100),1)
	t[2]=round(((qua/s)*100),1)
	t[3]=round(((qui/s)*100),1)
	t[4]=round(((sex/s)*100),1)
	t[5]=round(((sab/s)*100),1) 
	print(t)
-- EXECUTION TIME:
1.7133
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 10:36:34) 
-- CODE:
from numpy import*
v = array(eval(input("faltas:")))

seg=0
ter=0
qua=0
qui=0
sex=0
sab=0

for i in range(size(v)):
	if(v[i]==2):
		seg = seg + 1
	elif(v[i]==3):
		ter = ter + 1
	elif(v[i]==4):
		qua = qua + 1
	elif(v[i]==5):
		qui = qui + 1
	elif(v[i]==6):
		sex = sex + 1
	elif(v[i]==7):
		sab = sab + 1
s=seg+ter+qua+qui+sex+sab
t=zeros(6, dtype=float)
for i in v:
	t[0]=round(((seg/s)*100),1)
	t[1]=round(((ter/s)*100),1)
	t[2]=round(((qua/s)*100),1)
	t[3]=round(((qui/s)*100),1)
	t[4]=round(((sex/s)*100),1)
	t[5]=round(((sab/s)*100),1) 
	print(t)
-- EXECUTION TIME:
5.83308
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 10:36:35) 
-- CODE:
from numpy import*
v = array(eval(input("faltas:")))

seg=0
ter=0
qua=0
qui=0
sex=0
sab=0

for i in range(size(v)):
	if(v[i]==2):
		seg = seg + 1
	elif(v[i]==3):
		ter = ter + 1
	elif(v[i]==4):
		qua = qua + 1
	elif(v[i]==5):
		qui = qui + 1
	elif(v[i]==6):
		sex = sex + 1
	elif(v[i]==7):
		sab = sab + 1
s=seg+ter+qua+qui+sex+sab
t=zeros(6, dtype=float)
for i in v:
	t[0]=round(((seg/s)*100),1)
	t[1]=round(((ter/s)*100),1)
	t[2]=round(((qua/s)*100),1)
	t[3]=round(((qui/s)*100),1)
	t[4]=round(((sex/s)*100),1)
	t[5]=round(((sab/s)*100),1) 
	print(t)
-- EXECUTION TIME:
6.14636
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 10:36:35) 
-- CODE:
from numpy import*
v = array(eval(input("faltas:")))

seg=0
ter=0
qua=0
qui=0
sex=0
sab=0

for i in range(size(v)):
	if(v[i]==2):
		seg = seg + 1
	elif(v[i]==3):
		ter = ter + 1
	elif(v[i]==4):
		qua = qua + 1
	elif(v[i]==5):
		qui = qui + 1
	elif(v[i]==6):
		sex = sex + 1
	elif(v[i]==7):
		sab = sab + 1
s=seg+ter+qua+qui+sex+sab
t=zeros(6, dtype=float)
for i in v:
	t[0]=round(((seg/s)*100),1)
	t[1]=round(((ter/s)*100),1)
	t[2]=round(((qua/s)*100),1)
	t[3]=round(((qui/s)*100),1)
	t[4]=round(((sex/s)*100),1)
	t[5]=round(((sab/s)*100),1) 
	print(t)
-- EXECUTION TIME:
5.87303
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 10:36:35) 
-- CODE:
from numpy import*
v = array(eval(input("faltas:")))

seg=0
ter=0
qua=0
qui=0
sex=0
sab=0

for i in range(size(v)):
	if(v[i]==2):
		seg = seg + 1
	elif(v[i]==3):
		ter = ter + 1
	elif(v[i]==4):
		qua = qua + 1
	elif(v[i]==5):
		qui = qui + 1
	elif(v[i]==6):
		sex = sex + 1
	elif(v[i]==7):
		sab = sab + 1
s=seg+ter+qua+qui+sex+sab
t=zeros(6, dtype=float)
for i in v:
	t[0]=round(((seg/s)*100),1)
	t[1]=round(((ter/s)*100),1)
	t[2]=round(((qua/s)*100),1)
	t[3]=round(((qui/s)*100),1)
	t[4]=round(((sex/s)*100),1)
	t[5]=round(((sab/s)*100),1) 
	print(t)
-- EXECUTION TIME:
6.70444
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 10:36:36) 
-- CODE:
from numpy import*
v = array(eval(input("faltas:")))

seg=0
ter=0
qua=0
qui=0
sex=0
sab=0

for i in range(size(v)):
	if(v[i]==2):
		seg = seg + 1
	elif(v[i]==3):
		ter = ter + 1
	elif(v[i]==4):
		qua = qua + 1
	elif(v[i]==5):
		qui = qui + 1
	elif(v[i]==6):
		sex = sex + 1
	elif(v[i]==7):
		sab = sab + 1
s=seg+ter+qua+qui+sex+sab
t=zeros(6, dtype=float)
for i in v:
	t[0]=round(((seg/s)*100),1)
	t[1]=round(((ter/s)*100),1)
	t[2]=round(((qua/s)*100),1)
	t[3]=round(((qui/s)*100),1)
	t[4]=round(((sex/s)*100),1)
	t[5]=round(((sab/s)*100),1) 
	print(t)
-- EXECUTION TIME:
5.89962
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:

-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 10:36:40) 
-- CODE:
from numpy import*
v = array(eval(input("faltas:")))

seg=0
ter=0
qua=0
qui=0
sex=0
sab=0

for i in range(size(v)):
	if(v[i]==2):
		seg = seg + 1
	elif(v[i]==3):
		ter = ter + 1
	elif(v[i]==4):
		qua = qua + 1
	elif(v[i]==5):
		qui = qui + 1
	elif(v[i]==6):
		sex = sex + 1
	elif(v[i]==7):
		sab = sab + 1
s=seg+ter+qua+qui+sex+sab
t=zeros(6, dtype=float)
for i in v:
	t[0]=round(((seg/s)*100),1)
	t[1]=round(((ter/s)*100),1)
	t[2]=round(((qua/s)*100),1)
	t[3]=round(((qui/s)*100),1)
	t[4]=round(((sex/s)*100),1)
	t[5]=round(((sab/s)*100),1) 
	print(t)
-- EXECUTION TIME:
1.0136
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 10:36:46) 
-- CODE:
from numpy import*
v = array(eval(input("faltas:")))

seg=0
ter=0
qua=0
qui=0
sex=0
sab=0

for i in range(size(v)):
	if(v[i]==2):
		seg = seg + 1
	elif(v[i]==3):
		ter = ter + 1
	elif(v[i]==4):
		qua = qua + 1
	elif(v[i]==5):
		qui = qui + 1
	elif(v[i]==6):
		sex = sex + 1
	elif(v[i]==7):
		sab = sab + 1
s=seg+ter+qua+qui+sex+sab
t=zeros(6, dtype=float)
for i in v:
	t[0]=round(((seg/s)*100),1)
	t[1]=round(((ter/s)*100),1)
	t[2]=round(((qua/s)*100),1)
	t[3]=round(((qui/s)*100),1)
	t[4]=round(((sex/s)*100),1)
	t[5]=round(((sab/s)*100),1) 
	print(t)
-- EXECUTION TIME:
2.57155
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
faltas:[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 10:36:47) 
-- CODE:
from numpy import*
v = array(eval(input("faltas:")))

seg=0
ter=0
qua=0
qui=0
sex=0
sab=0

for i in range(size(v)):
	if(v[i]==2):
		seg = seg + 1
	elif(v[i]==3):
		ter = ter + 1
	elif(v[i]==4):
		qua = qua + 1
	elif(v[i]==5):
		qui = qui + 1
	elif(v[i]==6):
		sex = sex + 1
	elif(v[i]==7):
		sab = sab + 1
s=seg+ter+qua+qui+sex+sab
t=zeros(6, dtype=float)
for i in v:
	t[0]=round(((seg/s)*100),1)
	t[1]=round(((ter/s)*100),1)
	t[2]=round(((qua/s)*100),1)
	t[3]=round(((qui/s)*100),1)
	t[4]=round(((sex/s)*100),1)
	t[5]=round(((sab/s)*100),1) 
	print(t)
-- EXECUTION TIME:
2.56164
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1798/2566/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 10:36:47) 
-- CODE:
from numpy import*
v = array(eval(input("faltas:")))

seg=0
ter=0
qua=0
qui=0
sex=0
sab=0

for i in range(size(v)):
	if(v[i]==2):
		seg = seg + 1
	elif(v[i]==3):
		ter = ter + 1
	elif(v[i]==4):
		qua = qua + 1
	elif(v[i]==5):
		qui = qui + 1
	elif(v[i]==6):
		sex = sex + 1
	elif(v[i]==7):
		sab = sab + 1
s=seg+ter+qua+qui+sex+sab
t=zeros(6, dtype=float)
for i in v:
	t[0]=round(((seg/s)*100),1)
	t[1]=round(((ter/s)*100),1)
	t[2]=round(((qua/s)*100),1)
	t[3]=round(((qui/s)*100),1)
	t[4]=round(((sex/s)*100),1)
	t[5]=round(((sab/s)*100),1) 
	print(t)
-- EXECUTION TIME:
2.63187
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1798/2566/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 10:36:59) 
-- CODE:
from numpy import*
v = array(eval(input("faltas:")))

seg=0
ter=0
qua=0
qui=0
sex=0
sab=0

for i in range(size(v)):
	if(v[i]==2):
		seg = seg + 1
	elif(v[i]==3):
		ter = ter + 1
	elif(v[i]==4):
		qua = qua + 1
	elif(v[i]==5):
		qui = qui + 1
	elif(v[i]==6):
		sex = sex + 1
	elif(v[i]==7):
		sab = sab + 1
s=seg+ter+qua+qui+sex+sab
t=zeros(6, dtype=float)
for i in v:
	t[0]=round(((seg/s)*100),1)
	t[1]=round(((ter/s)*100),1)
	t[2]=round(((qua/s)*100),1)
	t[3]=round(((qui/s)*100),1)
	t[4]=round(((sex/s)*100),1)
	t[5]=round(((sab/s)*100),1) 
	print(t)
-- EXECUTION TIME:
0.830381
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 10:37:06) 
-- CODE:
from numpy import*
v = array(eval(input("faltas:")))

seg=0
ter=0
qua=0
qui=0
sex=0
sab=0

for i in range(size(v)):
	if(v[i]==2):
		seg = seg + 1
	elif(v[i]==3):
		ter = ter + 1
	elif(v[i]==4):
		qua = qua + 1
	elif(v[i]==5):
		qui = qui + 1
	elif(v[i]==6):
		sex = sex + 1
	elif(v[i]==7):
		sab = sab + 1
s=seg+ter+qua+qui+sex+sab
t=zeros(6, dtype=float)
for i in v:
	t[0]=round(((seg/s)*100),1)
	t[1]=round(((ter/s)*100),1)
	t[2]=round(((qua/s)*100),1)
	t[3]=round(((qui/s)*100),1)
	t[4]=round(((sex/s)*100),1)
	t[5]=round(((sab/s)*100),1) 
	print(t)
-- EXECUTION TIME:
1.76515
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 10:37:07) 
-- CODE:
from numpy import*
v = array(eval(input("faltas:")))

seg=0
ter=0
qua=0
qui=0
sex=0
sab=0

for i in range(size(v)):
	if(v[i]==2):
		seg = seg + 1
	elif(v[i]==3):
		ter = ter + 1
	elif(v[i]==4):
		qua = qua + 1
	elif(v[i]==5):
		qui = qui + 1
	elif(v[i]==6):
		sex = sex + 1
	elif(v[i]==7):
		sab = sab + 1
s=seg+ter+qua+qui+sex+sab
t=zeros(6, dtype=float)
for i in v:
	t[0]=round(((seg/s)*100),1)
	t[1]=round(((ter/s)*100),1)
	t[2]=round(((qua/s)*100),1)
	t[3]=round(((qui/s)*100),1)
	t[4]=round(((sex/s)*100),1)
	t[5]=round(((sab/s)*100),1) 
	print(t)
-- EXECUTION TIME:
1.82835
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1798/2566/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 10:37:07) 
-- CODE:
from numpy import*
v = array(eval(input("faltas:")))

seg=0
ter=0
qua=0
qui=0
sex=0
sab=0

for i in range(size(v)):
	if(v[i]==2):
		seg = seg + 1
	elif(v[i]==3):
		ter = ter + 1
	elif(v[i]==4):
		qua = qua + 1
	elif(v[i]==5):
		qui = qui + 1
	elif(v[i]==6):
		sex = sex + 1
	elif(v[i]==7):
		sab = sab + 1
s=seg+ter+qua+qui+sex+sab
t=zeros(6, dtype=float)
for i in v:
	t[0]=round(((seg/s)*100),1)
	t[1]=round(((ter/s)*100),1)
	t[2]=round(((qua/s)*100),1)
	t[3]=round(((qui/s)*100),1)
	t[4]=round(((sex/s)*100),1)
	t[5]=round(((sab/s)*100),1) 
	print(t)
-- EXECUTION TIME:
2.87107
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
[15.4  7.7 23.1  7.7 15.4 30.8]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 10:42:42) 
-- CODE:
from numpy import*
v = array(eval(input("faltas:")))

seg=0
ter=0
qua=0
qui=0
sex=0
sab=0

for i in range(size(v)):
	if(v[i]==2):
		seg = seg + 1
	elif(v[i]==3):
		ter = ter + 1
	elif(v[i]==4):
		qua = qua + 1
	elif(v[i]==5):
		qui = qui + 1
	elif(v[i]==6):
		sex = sex + 1
	elif(v[i]==7):
		sab = sab + 1
s=seg+ter+qua+qui+sex+sab
t=zeros(6, dtype=float)
for i in v:
	t[0]=round(((seg/s)*100),1)
	t[1]=round(((ter/s)*100),1)
	t[2]=round(((qua/s)*100),1)
	t[3]=round(((qui/s)*100),1)
	t[4]=round(((sex/s)*100),1)
	t[5]=round(((sab/s)*100),1) 
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 11:01:09) 
-- CODE:
from numpy import*
v = array(eval(input("faltas:")))

seg=0
ter=0
qua=0
qui=0
sex=0
sab=0

for i in range(size(v)):
	if(v[i]==2):
		seg = seg + 1
	elif(v[i]==3):
		ter = ter + 1
	elif(v[i]==4):
		qua = qua + 1
	elif(v[i]==5):
		qui = qui + 1
	elif(v[i]==6):
		sex = sex + 1
	elif(v[i]==7):
		sab = sab + 1
s=seg+ter+qua+qui+sex+sab
t=zeros(6, dtype=float)
for i in v:
	t[0]=round(((seg/s)*100),1)
	t[1]=round(((ter/s)*100),1)
	t[2]=round(((qua/s)*100),1)
	t[3]=round(((qui/s)*100),1)
	t[4]=round(((sex/s)*100),1)
	t[5]=round(((sab/s)*100),1) 
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 11:01:21) 
-- CODE:
from numpy import*

vet1 = array(eval(input("faltas: ")))
vet = zeros(6, dtype=float)
tam1 = size(vet1)
for i in range(tam1):
	if vet1[i] == 2:
		vet[0] = vet[0] + 1
	elif vet1[i] == 3:
		vet[1] = vet[1] + 1
	elif vet1[i] == 4:
		vet[2] = vet[2] + 1
	elif vet1[i] == 5:
		vet[3] = vet[3] + 1
	elif vet1[i] == 6:
		vet[4] = vet[4] + 1
	elif vet1[i] == 7:
		vet[5] = vet[5] + 1
for i in range(size(vet)):
	vet[i] = round((vet[i]*100/tam1), 1)
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 11:01:48) 
-- CODE:
from numpy import*

vet1 = array(eval(input("faltas: ")))
vet = zeros(6, dtype=float)
tam1 = size(vet1)
for i in range(tam1):
	if vet1[i] == 2:
		vet[0] = vet[0] + 1
	elif vet1[i] == 3:
		vet[1] = vet[1] + 1
	elif vet1[i] == 4:
		vet[2] = vet[2] + 1
	elif vet1[i] == 5:
		vet[3] = vet[3] + 1
	elif vet1[i] == 6:
		vet[4] = vet[4] + 1
	elif vet1[i] == 7:
		vet[5] = vet[5] + 1
for i in range(size(vet)):
	vet[i] = round((vet[i]*100/tam1), 1)
print(vet)
-- EXECUTION TIME:
1.10393
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.4  7.7 23.1  7.7 15.4 30.8]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
